	* cfitsio 4.6.3
	* everybeam 0.8.0
	* python-casacore 3.7.1
	* wcslib 8.5
	* libyaml 0.2.5
	* python-pyyaml 6.0.3

	Upgrade:

	boost 1.73.0 -> 1.90.0
	paraview 5.9.1 -> 5.13.2
	python-wheel 0.37.0 -> 0.46.3
	python-setuptools 59.6.0 -> 82.0.0

	Other:

	* Build single-threaded, multi-threaded and OpenMP variants of
	OpenBLAS
	* HDF5: Enable C++ support
	* ncurses: Enable symbol versioning

2025-03-12  James D. Trotter  <james@simula.no>

	Update libunwind to 1.6.2.

2024-08-26  James D. Trotter  <james@simula.no>

	Update UCX to 1.17.0, OpenMPI to 5.0.5 for ROCm-aware MPI.

2024-03-22  James D. Trotter  <james@simula.no>

	Update GMP 6.1.2 to 6.3.0 to fix issues on ARM that previously
	caused the tests to fail.

2023-09-14  James D. Trotter  <james@simula.no>

	New packages:

	* OpenSSL 1.1.1v
	* fenics-dolfinx-64 0.5.2
	* libbpf 1.2.2
	* libdwarf 0.7.0
	* pahole-1.25
	* python-tomli 1.2.3
	* scotch 7.0.4

	Upgrade:

	* elfutils 0.177 -> 0.189
	* gdb 9.3 -> 13.2
	* gdrcopy 2.2 -> 2.3.1
	* libevent 2.1.11-stable -> 2.1.12-stable
	* python-cython 0.29.21 -> 0.29.36
	* python-docutils 0.19 -> 0.20.1
	* python-pip 21.3.1 -> 23.2.1

	Other:

	* Build cmake without OpenSSL support
	* Build elfutils without debuginfod
	* Use pip's --target option instead of --prefix in Python example installer
	* rdma-core: build without documentation to avoid docutils dependency

2023-06-29  James D. Trotter  <james@simula.no>

	add StarPU 1.4.1.

2023-03-10  James D. Trotter  <james@simula.no>

	add current development version of FEniCS
	(python-fenics-dolfin-2019.2.0.dev0).

2023-02-13  James D. Trotter  <james@simula.no>

	* python-numba 0.52.0 -> 0.56.4
	* python-mpi4py 3.0.3 -> 3.1.4

2023-02-12  James D. Trotter  <james@simula.no>

	add basix 0.5.0, ffcx 0.5.0, ufl 2022.2.0 and dolfinx 0.5.2.

2023-01-03  James D. Trotter  <james@simula.no>

	* libfabric 1.11.1 -> 1.17.0
	* fontconfig 2.13.91 -> 2.13.96
	* freetype 2.10.1 -> 2.12.1

2022-12-13  James D. Trotter  <james@simula.no>
